[gd_scene load_steps=3 format=3 uid="uid://bmu4hkq5uw8eo"]

[ext_resource type="Script" path="res://dev/NightTime/scripts/action_template.gd" id="1_j5wfn"]
[ext_resource type="PackedScene" uid="uid://hxr6lxb18kr3" path="res://dev/NightTime/scenes/templates/confirm_button.tscn" id="2_nyb7f"]

[node name="action" type="Panel"]
custom_minimum_size = Vector2(265, 160)
offset_right = 265.0
offset_bottom = 160.0
script = ExtResource("1_j5wfn")

[node name="action_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_right = 0.972
anchor_bottom = 0.167
offset_right = -0.0400085
offset_bottom = -0.064003
grow_horizontal = 2
text = "Action Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="action_description" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.027
anchor_top = 0.182
anchor_right = 1.0
anchor_bottom = 0.665
offset_left = 0.0079999
offset_top = -0.0320015
offset_right = -8.0
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Here would be some description of what the action is: what would be done, how, what would be rewarded, and risks"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="chance_background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.027
anchor_top = 0.708
anchor_right = 0.175
anchor_bottom = 0.958
offset_left = 0.845
offset_top = -1.28
offset_right = 1.485
offset_bottom = -1.28
color = Color(1, 0, 0, 1)

[node name="chance_percentage" type="Label" parent="chance_background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.512
anchor_right = 1.003
anchor_bottom = 0.982
offset_top = -20.48
offset_right = 0.0204201
offset_bottom = 0.720001
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="chance_reward_icon" type="TextureRect" parent="chance_background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000200688
anchor_right = 1.00351
anchor_bottom = 1.0
offset_left = 0.00799942
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="confirm_button" parent="." instance=ExtResource("2_nyb7f")]
layout_mode = 1
anchor_left = 0.225
anchor_top = 0.708
anchor_right = 0.95
anchor_bottom = 0.958
offset_top = 0.0639954
offset_right = 0.0
offset_bottom = 0.0639954
